--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,10 +4,23 @@
     --color-primary: #0f172a;
     --color-secondary: #084E75;
     */
-    --color-primary: ##fff;
-    --color-secondary: #084E75;
+    --color-primary: #fff;
+    --color-secondary: #17577B;
+    --color-accent:#C2DA69;
+    --color-accent-secondary:#E9F1C8;
   }
+  html, body {
+    scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
   
+    
+}
+
   *,
   *::before,
   *::after {
@@ -25,7 +38,7 @@
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    /*background: #f8fafc;*/
+    background: #f8fafc;
     color: #084E75;
   }
   
@@ -53,9 +66,16 @@
   }
   
   .container {
-    max-width: 1200px;
+   /*max-width: 1200px; */
     margin: 0 auto;
     padding: 0 30px;
+  }
+
+  .imgHolder{
+    width: auto;
+    height: 330px;
+    overflow: hidden;
+    object-fit: cover;
   }
   
   .btn {
@@ -77,7 +97,7 @@
 
   /* Page Content */
 .page-content {
-  margin: 20px 0;
+ /* margin: 20px 0;*/
 }
 
 .page-content h2,
@@ -121,10 +141,14 @@ h2 {
 
 
 /*Custom Global Styles*/
+section{
+  width: 100%;
+  padding: 6ch;
+}
 .section-title{
   border-radius: 15px 15px 0px 0px; 
-  background-color: #AED235;
-  color: #084E75;
+  background-color: var(--color-accent);
+  color: var(--color-secondary);
   padding: 2em;
   font-size: larger;
 }
@@ -154,6 +178,7 @@ h2 {
 }
 
 .handout{
+  
   display: flex;
   flex-direction: column;
  align-items: center;
@@ -198,7 +223,38 @@ height: 100%;
   background-color: #AED235;
   color:#333;
 }
+.resources{
+  background-color: #fff;
 
+}
+
+
+.ARGuides{
+  background-color: var(--color-accent);
+}
+
+.GTG{
+  background-color: var(--color-accent-secondary);
+}
+
+.morphology{
+  background-color: var(--color-accent);
+}
+
+.ReciprocalTeaching{
+  background-color: var(--color-accent-secondary);
+}
+.SGQmodules{
+  background-color: var(--color-accent);
+}
+
+.vocabModules{
+  background-color: var(--color-accent-secondary);
+}
+
+.wordbuilder{
+  background-color: var(--color-accent);
+}
 
 /*details tag style */
 details summary { 
