added Poppins font

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,9 +33,18 @@
   html {
     scroll-behavior: smooth;
   } 
+  @font-face {
+    font-family: 'poppins';
+    src: url('fonts/Poppins/poppins-regular-webfont.woff2') format('woff2'),
+         url('fonts/Poppins/poppins-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
+}
+    
+    
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins','Roboto','Helvetica', 'Arial', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     background: #f8fafc;
