--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,8 +35,8 @@
   } 
   @font-face {
     font-family: 'poppins';
-    src: url('fonts/Poppins/poppins-regular-webfont.woff2') format('woff2'),
-         url('fonts/Poppins/poppins-regular-webfont.woff') format('woff');
+    src: url('../fonts/Poppins/poppins-regular-webfont.woff2') format('woff2'),
+         url('../fonts/Poppins/poppins-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
