--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -23,7 +23,8 @@ import { Icon } from 'astro-icon';
                
 
                 <div class='module-launch'>
-                    <a href='/modules#ARGuides' class='btn'><h3>Go To Anticipation Reaction Guides Literacy Modules</h3> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
+                    <a href='/modules#ARGuides' class='btn'>
+                        <h2>Go To Anticipation Reaction Guides Literacy Modules</h2> &nbsp;<Icon name="jam:arrow-circle-right" width='40'/></a>
                 </div>
             
             <div class='section-title'>
