--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -2,6 +2,7 @@
 import SGQWalkthrough from '/sgqresources/Self-Generated-Questions-digiCOACH-Edition.pdf';
 import ARGImg from '../images/gettyImages/GettyImages-121518480075.jpg';
 import GTGIMg from '../images/gettyImages/GTG.jpg';
+  import GTGsm from '../images/gettyImages/GTGsm.jpg';
 import MorphImg from '../images/gettyImages/GettyImages-94176587275.jpg';
 import RecipTechImg from '../images/gettyImages/reciprocalTeaching.jpg';
 import vocabImg from '../images/gettyImages/GettyImages-666835804SGQ.jpg';
@@ -174,7 +175,14 @@ const { title, body, url} = Astro.props as Props;
   
     <div class="container">
         <h2>Get The Gist Modules</h2>
-        <div class='imgHolder'> <img src={GTGIMg} alt="">  </div>
+
+        <div class='imgHolder'> 
+          <picture>
+            
+            <img src={GTGIMg} alt="">  
+          </picture>
+          
+        </div>
       {GTGData.map(GTG => (
         <a href={GTG.url}><h3>{GTG.title}</h3></a>
        <p>{GTG.body} </p>
@@ -197,7 +205,7 @@ const { title, body, url} = Astro.props as Props;
   
     <div class="container">
         <h2>Morphology Modules</h2>
-      <div class='imgHolder'><img src={MorphImg}></div>
+      <div class='imgHolder'><img src={MorphImg} alt=""></div>
       {MorphData.map(morph => (
         <a href={morph.url}><h3>{morph.title}</h3></a>
        <p>{morph.body} </p>
@@ -224,7 +232,7 @@ const { title, body, url} = Astro.props as Props;
   
     <div class="container">
         <h2>Reciprocal Teaching Modules</h2>
-        <div class='imgHolder'> <img src={RecipTechImg}></div>
+        <div class='imgHolder'> <img src={RecipTechImg} alt=""></div>
       {RTData.map(rt => (
         <a href={rt.url}><h3>{rt.title}</h3></a>
        <p>{rt.body} </p>
