--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,8 +81,8 @@
   }
 
   .imgHolder{
-    width: auto;
-    height: 360px;
+    width: 100%;
+    height: 500px;
     overflow: hidden;
     object-fit: cover;
   }
