--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Showcase from '../components/Showcase.astro';
+import SGQVideo from '../components/SGQVideo.astro';
+
 
 import sgqWalkthroughimg from '../images/Self-Generated-Questions-digiCOACH-Edition.png';
 
@@ -27,57 +29,7 @@ import { Icon } from 'astro-icon';
             <div class='section-title'>
                 <h2>Preview the SGQs Demonstration Videos</h2>
             </div>
-            <details open >
-                <summary >
-                    <h3>Purpose of Level One Questions</h3>
-                </summary>
-                <div class='webinar'>
-                <p><iframe id='sgqVid1' title='Purpose of Level One Questions' src="https://player.vimeo.com/video/312770749?h=4c2a96ad12?enablejsapi=1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
-                    <p><a href="https://vimeo.com/312770749">Self-Generated Questions | Purpose of Level One Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-                </div>
-              </details>
-
-              <details >
-                <summary>
-                  <h3>Level Two Questions Small Group</h3>
-                </summary>
-                <div class='webinar'>
-                    <iframe id='sgqVid2' title='Level Two Questions Small Group' src="https://player.vimeo.com/video/312784541?h=d592bbc651" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-                    
-                    <p><a href="https://vimeo.com/312784541">Self-Generated Questions | Level Two Questions - Small Group Instruction | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-                </div>
-              </details>
-
-              <details >
-                <summary>
-                    <h3>Introducing Level Three Questions </h3></summary>
-
-                    <div class='webinar'>
-                        <iframe id='sgqVid3' title='Level Two Questions Small Group' src="https://player.vimeo.com/video/312785865?h=4ac48b5bcd" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-                        <p><a href="https://vimeo.com/312785865">Self-Generated Questions | Introducing Level Three Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-                    </div>
-              </details>
-
-             <details >
-                <summary>
-                    <h3>Level Three Modeling </h3>
-                </summary>
-                <div class='webinar'>
-                    <iframe id="sgqVid4" title='Level Three Modeling' src="https://player.vimeo.com/video/312791822?h=afebd3670a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-                    <p><a href="https://vimeo.com/312791822">Self-Generated Questions | Modeling Level Three Questions | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-
-                </div>
-             </details>
-
-             <details >
-                <summary>
-                    <h3>Cloze Reading & Building Academic Vocabulary</h3>
-                </summary>
-               <div class='webinar'>
-                    <iframe id="sgqVid5" title='Cloze Reading & Building Academic Vocabulary' src="https://player.vimeo.com/video/312793797?h=aab2ee965a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-                <p><a href="https://vimeo.com/312793797">Self-Generated Questions | Cloze Reading and Building Academic Vocabulary | CALI Reads</a> from <a href="https://vimeo.com/user69554650">CALI Reads</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-               </div>
-             </details>
+           <SGQVideo />
              <div class='section-title'>
                 <h2>Self-Generated Questions Module Resources</h2>
             </div>
@@ -134,6 +86,7 @@ CCSS.ELA-Literacy.CCRA.R.10 Read and comprehend complex literary and information
        
       </section>
     
+      <SGQVideo />
     </Layout>
 
     <style>
