responsive front page image debug

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -3,13 +3,40 @@
 import Card from './Card.astro';
 
 const featuresData = [
-    { title: 'Anticipation Reaction Guides', body: 'Anticipation Reaction Guides (AR Guides) are advanced organizers that are used before, during, and after reading. The teacher creates a set of opinion statements to activate student background knowledge before they read, to identify textual evidence related to the statements while they are reading, and to reconsider their opinions in the light of textual evidence after reading.', url: '/anticipation-reaction-guides'},
-    { title: 'Get The Gist', body: 'Get the Gist is a part of the multi-component intervention Collaborative Strategic Reading (CSR), developed by Klingner and colleagues (1998). The CALI Reads training module focuses on the Get the Gist strategy within CSR. The Get the Gist Strategy teaches students a systematic process for creating a Gist statement for a text (or sections of a text) using the following 3 steps: Name the who or the what. Tell the most important thing about the who or what. Say it in about 10 words.', url: '/modules#GTG'},
-    { title: 'Morphology', body: 'Morphology is the study of morphemes—the smallest units of meaning in our language.', url: '/modules#morphology'},
-    { title: 'Reciprocal Teaching', body: 'Reciprocal Teaching (RT) is a cooperative learning routine that incorporates four high leverage reading comprehension strategies: Predicting, Questioning, Clarifying, and Summarizing (Palinscar & Brown, 1984). ', url: 'modules#ReciprocalTeaching'},
-    { title: 'Self-Generated Questions', body: 'The Self-Generated Questions (SGQs) Strategy is an evidence-based routine that teaches students to monitor their reading comprehension by stopping intermittently to ask different kinds of questions about key information in the text, determine how the information is related, and use text evidence to support their responses.', url: '/self-generated-questions' }, 
-    { title: 'Vocabulary Maps', body: 'The Vocabulary Map is a teacher-completed, graphic organizer used to preteach unfamiliar, conceptually important words prior to reading a text. Teachers can familiarize students with essential words using the Vocabulary Map in a quick five-minute lesson. On the Vocabulary Map, the teacher identifies a cognate for the word, student-friendly definition, visual representation, synonyms, use in context, and turn and talk prompts to engage students in oral language use.', url: '/modules#vocabModules'}, 
-    { title: 'Wordbuilder', body: 'The WordBuilder Intervention app a free application, is a research-based instructional tool to help adolescent struggling readers break down, build, and spell multisyllabic words. The app is designed for teacher-led, direct instruction delivered in small groups or one-on-one with struggling readers.', url: '/modules#wordbuilder'}
+    { 
+      title: 'Anticipation Reaction Guides', 
+      body: 'Anticipation Reaction Guides (AR Guides) are advanced organizers that are used before, during, and after reading. The teacher creates a set of opinion statements to activate student background knowledge before they read, to identify textual evidence related to the statements while they are reading, and to reconsider their opinions in the light of textual evidence after reading.', url: '/anticipation-reaction-guides'
+    },
+    { 
+      title: 'Get The Gist', 
+      body: 'Get the Gist is a part of the multi-component intervention Collaborative Strategic Reading (CSR), developed by Klingner and colleagues (1998). The CALI Reads training module focuses on the Get the Gist strategy within CSR. The Get the Gist Strategy teaches students a systematic process for creating a Gist statement for a text (or sections of a text) using the following 3 steps: Name the who or the what. Tell the most important thing about the who or what. Say it in about 10 words.', 
+      url: '/modules#GTG'
+    },
+    { 
+      title: 'Morphology', 
+      body: 'Morphology is the study of morphemes—the smallest units of meaning in our language.', 
+      url: '/modules#morphology'
+    },
+    { 
+      title: 'Reciprocal Teaching', 
+      body: 'Reciprocal Teaching (RT) is a cooperative learning routine that incorporates four high leverage reading comprehension strategies: Predicting, Questioning, Clarifying, and Summarizing (Palinscar & Brown, 1984). ', 
+      url: 'modules#ReciprocalTeaching'
+    },
+    { 
+      title: 'Self-Generated Questions', 
+      body: 'The Self-Generated Questions (SGQs) Strategy is an evidence-based routine that teaches students to monitor their reading comprehension by stopping intermittently to ask different kinds of questions about key information in the text, determine how the information is related, and use text evidence to support their responses.', 
+      url: '/self-generated-questions' 
+    }, 
+    { 
+      title: 'Vocabulary Maps', 
+      body: 'The Vocabulary Map is a teacher-completed, graphic organizer used to preteach unfamiliar, conceptually important words prior to reading a text. Teachers can familiarize students with essential words using the Vocabulary Map in a quick five-minute lesson. On the Vocabulary Map, the teacher identifies a cognate for the word, student-friendly definition, visual representation, synonyms, use in context, and turn and talk prompts to engage students in oral language use.', 
+      url: '/modules#vocabModules'
+    }, 
+    { 
+      title: 'Wordbuilder', 
+      body: 'The WordBuilder Intervention app a free application, is a research-based instructional tool to help adolescent struggling readers break down, build, and spell multisyllabic words. The app is designed for teacher-led, direct instruction delivered in small groups or one-on-one with struggling readers.', 
+      url: '/modules#wordbuilder'
+    }
 
 ];
 ---
