--- a/src/pages/self-generated-questions.astro
+++ b/src/pages/self-generated-questions.astro
@@ -8,6 +8,7 @@ import sgqWalkthroughimg from '../images/Self-Generated-Questions-digiCOACH-Edit
 
 import pdf from '../images/pdf.png';
 import { Icon } from 'astro-icon';
+import RTResources from '../components/RTResources.astro';
 
 ---
 <Layout >
@@ -85,6 +86,7 @@ CCSS.ELA-Literacy.CCRA.R.10 Read and comprehend complex literary and information
 
        
       </section>
+      
         </Layout>
 
     <style>
