edits to GTG image for responsiveness

--- a/src/components/Modules.astro
+++ b/src/components/Modules.astro
@@ -1,7 +1,7 @@
 ---
 import SGQWalkthrough from '/sgqresources/Self-Generated-Questions-digiCOACH-Edition.pdf';
 import ARGImg from '../images/gettyImages/GettyImages-121518480075.jpg';
-import GTGIMg from '../images/gettyImages/GTG.jpg';
+import GTGIMg from '../images/gettyImages/GTG75.jpg';
 import GTGsm from '../images/gettyImages/GTGsm.jpg';
 import MorphImg from '../images/gettyImages/GettyImages-94176587275.jpg';
 import RecipTechImg from '../images/gettyImages/reciprocalTeaching.jpg';
