--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,6 +75,7 @@
   }
   
   .container {
+    width: 100%;
    /*max-width: 1200px; */
     margin: 0 auto;
     padding: 0 30px;
@@ -82,7 +83,7 @@
 
   .imgHolder{
     width: 100%;
-    height: 450px;
+    height: auto;
     overflow: hidden;
     object-fit: cover;
   }
