revised css for responsivness. Restored background color. Image display grid

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,9 +131,19 @@
     .logos {
       display: none;
     }
+    section{
+      min-width: 400px;
+    }
+   /*
     :root {
       --color-accent: #fff;
       --color-accent-secondary:#fff;
+    }
+    */
+    .imgHolder{
+      width:100%;
+      display: grid;
+      overflow:visible;
     }
   }
   
