--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@
     
   body {
     font-family: 'Poppins','Roboto','Helvetica', 'Arial', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     line-height: 1.5;
     background: #f8fafc;
     color: #084E75;
