--- a/src/pages/modules.astro
+++ b/src/pages/modules.astro
@@ -3,12 +3,14 @@ import Layout from '../layouts/Layout.astro';
  
 import Modules from '../components/Modules.astro';
 import Showcase from '../components/Showcase.astro';
+import ModuleNav from '../components/ModuleNav.astro';
 
 ---
 
 <Layout title="Literacy Modules">
     <Showcase showExtra={false} />
     <section class="page-content">
+            <ModuleNav />
             <Modules />
 
 </div>
