edited module nav urls

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -20,7 +20,7 @@ const featuresData = [
     { 
       title: 'Reciprocal Teaching', 
       body: 'Reciprocal Teaching (RT) is a cooperative learning routine that incorporates four high leverage reading comprehension strategies: Predicting, Questioning, Clarifying, and Summarizing (Palinscar & Brown, 1984). ', 
-      url: 'modules#ReciprocalTeaching'
+      url: '/modules#ReciprocalTeaching'
     },
     { 
       title: 'Self-Generated Questions', 
