--- a/src/components/ModuleNav.astro
+++ b/src/components/ModuleNav.astro
@@ -4,13 +4,13 @@
 ---
 
 <ul class='moduleNav'>
-<li><a href='modules#ARGuides'>AR Guides</a></li>
-<li><a href='modules#GTG'>Get The Gist</a></li>
-<li><a href='modules#morphology'>Morphology</a></li>
-<li><a href='modules#ReciprocalTeaching'>Reciprocal Teaching</a></li>
-<li><a href='modules#SGQmodules'>Self-Generated Questions Modules</a></li>
-<li><a href='modules#vocabModules'>Vocabulary Maps</a></li>
-<li><a href='modules#wordbuilder'>WordBuilder</a></li>
+<li><a href='/modules#ARGuides'>AR Guides</a></li>
+<li><a href='/modules#GTG'>Get The Gist</a></li>
+<li><a href='/modules#morphology'>Morphology</a></li>
+<li><a href='/modules#ReciprocalTeaching'>Reciprocal Teaching</a></li>
+<li><a href='/modules#SGQmodules'>Self-Generated Questions Modules</a></li>
+<li><a href='/modules#vocabModules'>Vocabulary Maps</a></li>
+<li><a href='/modules#wordbuilder'>WordBuilder</a></li>
 
 </ul>
 
