--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,8 +11,7 @@ import bookImage from '../images/CR_logo_sm_V_rgb.png';
     <Showcase showExtra={false} />
     <section class="page-content">
         <h2>404!</h2>
-        <h2><a href='/index.html'><img src={bookImage} ></a></h2>
+        <h2><a href='/index.html' aria-label="Go back to CALIREADS"><img src={bookImage} alt=""></a></h2>
         <h2>Page Not Found</h2>
-</div>
 </section>
 </Layout>
