added reciprocal teaching page, modifed the RT video file

--- a/src/components/ModuleNav.astro
+++ b/src/components/ModuleNav.astro
@@ -35,7 +35,7 @@
     @media (max-width: 1100px) {
         .moduleNav{
             display: grid;
-  `grid-template-columns: repeat(2, 3fr);
+            grid-template-columns: repeat(2, 3fr);
         }
 
         .moduleNav li{
