--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -61,7 +61,7 @@ import { Icon } from 'astro-icon';
                 <h3>Anticipation Reaction Template</h3>
             </div>
             <div class='section-desc'>
-               <div class='handout'> <a href={ARGuidePDF}><img src={ARGuideTemplate} class='handout' alt='ARG Template' title='ARG Template' width='980px' height='729px'></a></div>
+               <div class='handout'> <a href={ARGuidePDF}><img src={ARGuideTemplate}  alt='ARG Template' title='ARG Template' width='980px' height='729px'></a></div>
             </div>
 
             <div class='section-title'>
@@ -69,7 +69,7 @@ import { Icon } from 'astro-icon';
             </div>
             <div class='section-desc'>
             <div class='handout'>
-                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} class='handout' alt='DigiCoach Walkthrough' title='DigiCoach Walkthrough' width='980px' height='729px'></a>
+                <a href='https://www.calireads.org/bridge-content/ARGuides/AR_Guides_Course_Resources/digiCoach%20walkthrough%20Look%20Fors.pdf'><img src={digiCoachWalkthrough} alt='DigiCoach Walkthrough' title='DigiCoach Walkthrough' width='980px' height='729px'></a>
             </div>
             <p>Use the Anticipation Reaction Guide Walkthrough Tool during classroom walkthroughs to: </p>
                 <ul class='arg-lists'>
