added GTG page and resources

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -10,7 +10,7 @@ const featuresData = [
     { 
       title: 'Get The Gist', 
       body: 'Get the Gist is a part of the multi-component intervention Collaborative Strategic Reading (CSR), developed by Klingner and colleagues (1998). The CALI Reads training module focuses on the Get the Gist strategy within CSR. The Get the Gist Strategy teaches students a systematic process for creating a Gist statement for a text (or sections of a text) using the following 3 steps: Name the who or the what. Tell the most important thing about the who or what. Say it in about 10 words.', 
-      url: '/modules#GTG'
+      url: '/get-the-gist'
     },
     { 
       title: 'Morphology', 
