modified section titles

--- a/src/pages/anticipation-reaction-guides.astro
+++ b/src/pages/anticipation-reaction-guides.astro
@@ -28,14 +28,14 @@ import { Icon } from 'astro-icon';
                 </div>
             
             <div class='section-title'>
-            <h3 >Training Webinar</h3>
+            <h3 >Anticipation Reaction Guides Training Webinar</h3>
         </div>
         
             <div class='section-desc'>     
             <p>Dr. Deborah Reed demonstrates how to use Anticipation Reaction Guides (AR Guides) to support adolescent reading comprehension across content areas. Learn how to use these advanced graphic organizers to activate student background knowledge, support their comprehension of complex texts, and build their use of text evidence to support opinions.</p>
           
             <div class='outcomes'> 
-                <h4>Participants Outcomes</h4>
+                <h4>Anticipation Reaction Guides  Participants Outcomes</h4>
                     <ul class='arg-lists'>
                         <li>Learn how AR Guides support reading comprehension</li>
                         <li>Learn how to prepare effective AR Guide statements</li>
@@ -58,7 +58,7 @@ import { Icon } from 'astro-icon';
         
 
             <div class='section-title'>
-                <h3>Anticipation Reaction Template</h3>
+                <h3>Anticipation Reaction Guides Template</h3>
             </div>
             <div class='section-desc'>
                <div class='handout'> <a href={ARGuidePDF}><img src={ARGuideTemplate}  alt='ARG Template' title='ARG Template' width='980px' height='729px'></a></div>
